# intentgate-sdk-python

./: .gitignore  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
src/intentgate/: __init__.py  capability.py  client.py  exceptions.py
tests/: test_capability.py  test_client.py
