[project]
name = "intentgate"
version = "0.1.0"
description = "Python SDK for the IntentGate authorization gateway"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [{ name = "IntentGate contributors" }]
keywords = ["ai-agents", "authorization", "mcp", "intentgate", "security"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
]
dependencies = [
  "httpx>=0.27,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "respx>=0.21",
  "ruff>=0.5",
]

[project.urls]
Homepage    = "https://github.com/NetGnarus/intentgate-sdk-python"
Issues      = "https://github.com/NetGnarus/intentgate-sdk-python/issues"
Repository  = "https://github.com/NetGnarus/intentgate-sdk-python"

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/intentgate"]

[tool.pytest.ini_options]
testpaths   = ["tests"]
addopts     = "-q"
