[project]
name = "intentgate"
version = "0.3.0"
description = "Python SDK for the IntentGate authorization gateway"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [{ name = "IntentGate contributors" }]
keywords = ["ai-agents", "authorization", "mcp", "intentgate", "security"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security",
  "Typing :: Typed",
]
dependencies = [
  "httpx>=0.27,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "respx>=0.21",
  "ruff>=0.6,<1",
  "build>=1.2",
]

[project.urls]
Homepage      = "https://github.com/NetGnarus/intentgate-sdk-python"
Documentation = "https://github.com/NetGnarus/intentgate-sdk-python#readme"
Repository    = "https://github.com/NetGnarus/intentgate-sdk-python"
Issues        = "https://github.com/NetGnarus/intentgate-sdk-python/issues"
Changelog     = "https://github.com/NetGnarus/intentgate-sdk-python/releases"

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/intentgate"]

[tool.hatch.build.targets.sdist]
include = [
  "src/intentgate",
  "tests",
  "README.md",
  "LICENSE",
  "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-q"

[tool.ruff]
line-length    = 100
target-version = "py310"

[tool.ruff.lint]
# E/W = pycodestyle, F = pyflakes, I = isort, B = bugbear, UP = pyupgrade,
# SIM = flake8-simplify, N = pep8-naming, PT = pytest-style.
select = ["E", "W", "F", "I", "B", "UP", "SIM", "N", "PT"]
ignore = ["E501"]
